--- a/app/build.gradle
+++ b/app/build.gradle
@@ -22,11 +22,20 @@ android {
     }
 }
 
+android.defaultConfig.manifestPlaceholders = [
+        "appAuthRedirectScheme": "com.oktapreview.dev-928137"
+]
+
 dependencies {
     implementation fileTree(dir: 'libs', include: ['*.jar'])
-    implementation"org.jetbrains.kotlin:kotlin-stdlib-jre7:$kotlin_version"
-    implementation 'com.android.support:appcompat-v7:26.1.0'
-    implementation 'com.android.support:design:26.1.0'
+    implementation "org.jetbrains.kotlin:kotlin-stdlib-jre7:$kotlin_version"
+    implementation 'com.android.support:appcompat-v7:+'
+    implementation 'com.android.support:cardview-v7:+'
+    implementation 'com.android.support:design:+'
+    implementation 'com.okta.android:appauth-android:+'
+    implementation 'com.android.support.constraint:constraint-layout:1.0.2'
+    implementation 'org.greenrobot:eventbus:3.1.1'
+    implementation 'com.github.florent37:expansionpanel:1.0.7'
     testImplementation 'junit:junit:4.12'
     androidTestImplementation 'com.android.support.test:runner:1.0.1'
     androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.1'
