ok funge okta, mannaggia la marrocca

--- a/app/src/main/res/raw/okta_app_auth_config.json
+++ b/app/src/main/res/raw/okta_app_auth_config.json
@@ -3,7 +3,8 @@
   "redirect_uri": "com.oktapreview.dev-928137:/callback",
   "scopes": [
     "openid",
-    "profile"
+    "profile",
+    "offline_access"
   ],
   "issuer_uri": "https://dev-928137.oktapreview.com/oauth2/default"
 }
