--- a/app/build.gradle
+++ b/app/build.gradle
@@ -5,11 +5,11 @@ apply plugin: 'kotlin-android'
 apply plugin: 'kotlin-android-extensions'
 
 android {
-    compileSdkVersion 26
+    compileSdkVersion 27
     defaultConfig {
         applicationId "it.projector.lamba.projector"
         minSdkVersion 23
-        targetSdkVersion 26
+        targetSdkVersion 27
         versionCode 1
         versionName "1.0"
         testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
@@ -29,10 +29,18 @@ android.defaultConfig.manifestPlaceholders = [
 dependencies {
     implementation fileTree(dir: 'libs', include: ['*.jar'])
     implementation "org.jetbrains.kotlin:kotlin-stdlib-jre7:$kotlin_version"
+    //noinspection GradleDynamicVersion,GradleCompatible
     implementation 'com.android.support:appcompat-v7:+'
+    //noinspection GradleDynamicVersion
     implementation 'com.android.support:cardview-v7:+'
+    //noinspection GradleDynamicVersion
     implementation 'com.android.support:design:+'
+    //noinspection GradleDynamicVersion
     implementation 'com.okta.android:appauth-android:+'
+    //noinspection GradleDynamicVersion
+    implementation 'commons-io:commons-io:+'
+    //noinspection GradleDynamicVersion
+    implementation 'com.beust:klaxon:+'
     implementation 'com.android.support.constraint:constraint-layout:1.0.2'
     implementation 'org.greenrobot:eventbus:3.1.1'
     implementation 'com.github.florent37:expansionpanel:1.0.7'
